# moltis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  fly.toml  justfile  render.yaml
.do/: deploy.template.yaml
.github/workflows/: ci.yml  provider-integration.yml  release.yml  sandbox-packages.yml
apps/macos/Sources/: AppSettings.swift
crates/agents/: Cargo.toml
crates/agents/src/: lib.rs  model.rs  prompt.rs  runner.rs  silent_turn.rs  title.rs  tool_loop_detector.rs  tool_registry.rs
crates/agents/src/prompt/: builder.rs  tests.rs
crates/agents/src/providers/: anthropic.rs  async_openai_provider.rs  genai_provider.rs  mod.rs  openai.rs
crates/agents/src/providers/local_gguf/: mod.rs  models.rs
crates/agents/src/runner/: mod.rs  non_streaming.rs  streaming.rs  tool_result.rs
crates/agents/src/runner/tests/: basic.rs  helpers.rs  mod.rs
crates/auth/src/: credential_store.rs
crates/benchmarks/benches/: code_index.rs
crates/browser/: Cargo.toml
crates/browser/src/: types.rs
crates/channels/src/: commands.rs  otp.rs  plugin.rs
crates/chat/: Cargo.toml
crates/chat/src/: agent_loop.rs  channels.rs  compaction.rs  lib.rs  memory_tools.rs  message.rs  models.rs  prompt.rs  run_with_tools.rs  runtime.rs  streaming.rs  types.rs
crates/claude-import/src/: mcp_servers.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/code-index/src/: discover.rs
crates/common/src/: hooks.rs  http_client.rs  secret_serde.rs  ssrf.rs
crates/config/: Cargo.toml
crates/config/src/: env_subst.rs  lib.rs  loader.rs  schema.rs  template.rs  validate.rs  version.rs
crates/cron/src/: service.rs  types.rs
crates/ctl/: Cargo.toml
crates/ctl/src/: client.rs  error.rs  main.rs  output.rs
crates/ctl/src/commands/: config.rs  health.rs  mcp.rs  mod.rs  providers.rs  skills.rs  webhooks.rs
crates/discord/src/: config.rs  handler.rs  plugin.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: agent_persona.rs  approval.rs  auth_routes.rs  channel.rs  channel_agent_tools.rs  channel_events.rs  chat.rs  lib.rs  local_llm_setup.rs  mcp_agent_tools.rs  mcp_service.rs  methods.rs  node_exec.rs  project_aware_tools.rs  provider_setup.rs  server.rs  services.rs  session.rs  session_types.rs  state.rs  update_check.rs  updater.rs  voice.rs
crates/gateway/tests/: chat_ui.rs
crates/graphql/tests/: integration.rs
crates/httpd/: Cargo.toml
crates/httpd/src/: auth_middleware.rs  ws.rs  (+6 more)
crates/mcp-agent-bridge/: Cargo.toml
crates/mcp-agent-bridge/src/: lib.rs
crates/plugins/: Cargo.toml
crates/providers/: build.rs
crates/secret-store/: Cargo.toml
crates/sessions/: Cargo.toml
crates/sessions/src/: lib.rs  message.rs  metadata.rs  store.rs
crates/skills/: Cargo.toml
crates/tools/: Cargo.toml
crates/web/: build.rs
crates/webhooks/: Cargo.toml
crates/whatsapp/: Cargo.toml
deploy/: moltis.service
docs/src/: SUMMARY.md  authentication.md  channels.md  compaction.md  comparison.md  configuration.md  hooks.md  local-validation.md  matrix.md  mcp.md  memory-comparison.md  memory-surfaces.md  memory.md  security.md  system-prompt.md  teams.md
flatpak/: org.moltbot.Moltis.yml
plans/: 2026-04-14-plan-aur-publishing.md
prompts/: session-2026-04-05-e2e-ci-hardening.md  session-2026-04-12-container-native-file-ops.md  session-2026-04-12-native-sandbox-file-ops.md  session-2026-04-12-sandbox-ci-and-glob-ux.md
scripts/: build-web-assets.sh  cargo-build-moltis.sh  install-linux-build-deps.sh  local-validate.sh  prepare-release.sh  test-webhook.sh
snap/: snapcraft.yaml
website/: index.de.html  index.en.html  index.es.html  index.fr.html  index.it.html  index.ja.html  index.ko.html  index.pt.html  index.ru.html  index.zh.html  package.json  releases.json
website/_partials/: nav.html
website/changelog/: index.html
website/scripts/: build-changelog.mjs  build-i18n.mjs
(+325 files in other folders)
