[package]
name    = "moltis-ctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "moltis-ctl"
path = "src/main.rs"

[dependencies]
anyhow          = { workspace = true }
clap            = { workspace = true }
futures         = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid            = { workspace = true }
