[package]
name = "moltis-sessions"
version.workspace = true
edition.workspace = true

[dependencies]
moltis-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
fd-lock = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
